<resources>
    <string name="app_name">Roadmapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="roadmaps_name">Roadmaps</string>
    <string name="home_name">Home</string>
    <string name="achievements_name">Achievements</string>
    <string name="menu_edit_title">Edit</string>
    <string name="menu_export_title">Export</string>
    <string name="menu_share_title">Share</string>
    <string name="menu_settings_title">Settings</string>
    <string name="roadmap_name">Roadmap Android Studio</string>
    <string name="create_roadmap_text">Create</string>
    <string name="cancel_roadmap_text">Cancel</string>
    <string name="new_roadmap_name_text">Roadmap name</string>
    <string name="keywords_text">Keywords</string>
    <string name="add_resources_text">Add resources</string>
    <string name="roadmap_name_text">Roadmap name:</string>
    <string name="resources_text">Resources:</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change account password</string>
    <string name="delete_account">Delete account</string>
    <string name="keywords_hint_text">Enter keywords to look up resources</string>
</resources>