<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".newroadmap.NewRoadmapFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.roadmapp.newroadmap.NewRoadmapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_newRoadmap_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding"
                android:layout_marginRight="@dimen/padding"
                android:layout_weight="0.5"
                android:text="@string/create_roadmap_text"
                app:backgroundTint="@color/success" />

            <Button
                android:id="@+id/btn_newRoadmap_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding"
                android:layout_marginRight="@dimen/padding"
                android:layout_weight="0.5"
                android:text="@string/cancel_roadmap_text"
                app:backgroundTint="@color/error" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_newRoadmap_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/new_roadmap_name_text"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_newRoadmap_name" />

        <Button
            android:id="@+id/btn_newRoadmap_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding"
            android:layout_marginRight="@dimen/padding"
            android:text="@string/add_resources_text"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_newRoadmap_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:text="@string/roadmap_name_text"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_newRoadmap_resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding"
            android:text="@string/resources_text"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_newRoadmap_name" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_resources"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/padding"
            app:layout_constraintBottom_toTopOf="@+id/btn_newRoadmap_add"
            app:layout_constraintTop_toBottomOf="@+id/tv_newRoadmap_resources"
            app:layout_constraintVertical_bias="0.52"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>