<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_settings_changeUsername"
            android:layout_width="380dp"
            android:layout_height="78dp"
            android:layout_margin="@dimen/padding"
            android:text="@string/change_username"
            app:backgroundTint="?attr/colorButtonNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_settings_changePassword"
            android:layout_width="380dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/padding"
            android:text="@string/change_password"
            app:backgroundTint="?attr/colorButtonNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_settings_changeUsername"
            tools:text="@string/change_password" />

        <Button
            android:id="@+id/btn_settings_delete"
            android:layout_width="380dp"
            android:layout_height="80dp"
            android:layout_margin="@dimen/padding"
            android:text="@string/delete_account"
            app:backgroundTint="@color/error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_settings_changePassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>